fix: remove unnecessary scrollbars on page zoom

--- a/app/assets/stylesheets/limber/screen.scss
+++ b/app/assets/stylesheets/limber/screen.scss
@@ -535,6 +535,7 @@ footer.version-info {
   /* Set the fixed height of the footer here */
   height: 50px;
   line-height: 50px; /* Vertically center the text there */
+  overflow: hidden;
   background-color: $gray-100;
 }
 
